# intro

./: .env.example  .gitignore  .gitmodules  Dockerfile  TODO.md  commands.md  conc.txt  custom_map_lol.pgm  custom_map_lol.yaml  docker-compose.yaml  ros_entrypoint.sh  run_llm_nav.sh  topology_graph_debug.json  warehouse_world.launch.py
docs/: architecture.md  custom_map_slam.md  llm_flows_detailed_summary.md  logs.txt  run_llm_nav_phases.md
experiment_data_folder/: _batch_summary_20260426_214857.json  _batch_summary_20260426_221938.json  _batch_summary_20260426_225316.json  _batch_summary_20260426_235848.json  _batch_summary_20260427_000002.json  _batch_summary_20260427_000323.json  _batch_summary_20260427_000810.json  _batch_summary_20260427_001111.json  _batch_summary_20260427_003842.json
graphs/: README.md  graph_guide.txt  plot_experiments.py
graphs/.mplconfig/: fontlist-v390.json
llm_agent_runs/20260415_023316/: step_001_meta.txt  step_003_meta.txt  step_005_meta.txt  step_007_meta.txt  step_009_meta.txt  step_011_meta.txt  step_013_meta.txt  step_015_meta.txt  step_017_meta.txt
llm_agent_runs/20260419_033428/: step_002_meta.txt  step_003_meta.txt  step_004_meta.txt  step_005_meta.txt  step_006_meta.txt  step_007_meta.txt  step_008_meta.txt  step_009_meta.txt  step_010_meta.txt  step_011_meta.txt  step_012_meta.txt  step_013_meta.txt  step_014_meta.txt  step_015_meta.txt  step_016_meta.txt  step_017_meta.txt  step_018_meta.txt  step_019_meta.txt  step_020_meta.txt  step_021_meta.txt  step_022_meta.txt  step_023_meta.txt  step_024_meta.txt  step_025_meta.txt  step_026_meta.txt  step_027_meta.txt  step_028_meta.txt  step_029_meta.txt  step_030_meta.txt  step_031_meta.txt  step_032_meta.txt  step_033_meta.txt  step_034_meta.txt  step_035_meta.txt  step_036_meta.txt  step_037_meta.txt  step_038_meta.txt  step_039_meta.txt  step_040_meta.txt  step_041_meta.txt  (+9 more)
llm_agent_runs/20260419_235029/: step_001_meta.txt  step_002_meta.txt  step_003_meta.txt  step_004_meta.txt  step_005_meta.txt  step_006_meta.txt  step_007_meta.txt  step_008_meta.txt  step_009_meta.txt  step_010_meta.txt  step_011_meta.txt  step_012_meta.txt  step_013_meta.txt  step_014_meta.txt  step_015_meta.txt  step_016_meta.txt  step_017_meta.txt  step_018_meta.txt  step_019_meta.txt  step_020_meta.txt  step_021_meta.txt  step_022_meta.txt  step_023_meta.txt  step_024_meta.txt
llm_agent_runs/20260419_235542/: step_002_meta.txt  step_003_meta.txt  step_004_meta.txt  step_005_meta.txt  step_006_meta.txt  step_007_meta.txt  step_008_meta.txt  step_009_meta.txt  step_010_meta.txt  step_011_meta.txt  step_012_meta.txt  step_013_meta.txt  step_014_meta.txt  step_015_meta.txt  step_016_meta.txt  step_017_meta.txt  step_018_meta.txt  step_019_meta.txt  step_020_meta.txt  step_021_meta.txt  step_022_meta.txt  step_023_meta.txt  step_024_meta.txt  step_025_meta.txt  step_026_meta.txt  step_027_meta.txt  step_028_meta.txt  step_029_meta.txt  step_030_meta.txt  step_031_meta.txt  step_032_meta.txt  step_033_meta.txt
llm_agent_runs/20260420_002833/: step_001_meta.txt  step_002_meta.txt  step_003_meta.txt  step_004_meta.txt  step_005_meta.txt  step_006_meta.txt  step_007_meta.txt  step_008_meta.txt  step_009_meta.txt  step_010_meta.txt  step_011_meta.txt  step_012_meta.txt  (+24 more)
src/custom_map_builder/: README.md  package.xml  setup.cfg  setup.py
src/custom_map_builder/custom_map_builder/: click_echo_node.py
src/custom_map_builder/launch/: map_builder.launch.py
src/custom_map_builder/maps/: default.pgm  default.yaml  diamond_blocked.pgm  diamond_path.pgm  map_poses.yaml  y_path.pgm
src/custom_map_builder/rviz/: map_builder.rviz
src/custom_map_builder/scripts/: generate_y_corridor_map.py  run_map_builder.sh
src/map_view_debug/: package.xml  setup.cfg  setup.py
src/map_view_debug/launch/: map_view_debug.launch.py
src/map_view_debug/map_view_debug/: map_view_debug_node.py
src/map_view_debug/scripts/: run_map_view_debug.sh
src/nav2_llm_demo/: README.md  package.xml  setup.cfg  setup.py
src/nav2_llm_demo/config/: custom_map.pgm  custom_map.yaml  llm_nav_params.yaml  route_graph.json
src/nav2_llm_demo/launch/: llm_agent.launch.py  llm_nav.launch.py
src/nav2_llm_demo/maps/: nav_config.yaml  warehouse.yaml
src/nav2_llm_demo/nav2_llm_demo/: llm_agent_node.py  llm_nav_node.py  llm_route_agent_node.py
src/nav2_llm_demo/nav2_llm_demo/llm/: __init__.py  controller.py  graph_map_renderer.py  llm_agent.py  llm_routing.py  map_renderer.py  message_utils.py  request_logger.py  topology_builder.py  topology_graph.py
src/nav2_llm_demo/nav2_llm_demo/llm/flow_1/: __init__.py  agent.py  prompt.py
src/nav2_llm_demo/nav2_llm_demo/llm/flow_2/: __init__.py  agent.py  logging.py  prompt.py  tools.py
src/nav2_llm_demo/nav2_llm_demo/llm/flow_3/: __init__.py  agent.py  interpreter.py  lidar.py  prompt.py  tools.py
src/nav2_llm_demo/nav2_llm_demo/llm/flow_4/: __init__.py  agent.py  prompt.py  situation.py
src/nav2_llm_demo/nav2_llm_demo/llm/flow_5/: __init__.py  agent.py  path_planner.py  prompt.py  renderer.py  situation.py
src/nav2_llm_demo/nav2_llm_demo/llm/flow_6/: __init__.py  agent.py
src/nav2_llm_demo/nav2_llm_demo/llm/flow_7/: __init__.py  agent.py
src/nav2_llm_demo/rviz/: llm_agent.rviz
src/nav2_llm_demo/scripts/: parse_map_poses.py  parse_nav_config.py  run_llm_nav.sh
src/nav2_llm_experiments/: README.md  package.xml  setup.cfg  setup.py
src/nav2_llm_experiments/config/: experiments.yaml
src/nav2_llm_experiments/nav2_llm_experiments/: recorder_node.py  run_experiments.py
src/nav2_llm_experiments/scripts/: run_experiments.sh
src/world_to_map/: README.md  package.xml  run_world_to_map.sh  setup.cfg  setup.py
src/world_to_map/launch/: world_to_map.launch.py
src/world_to_map/maps/: test_zone.world_map.yaml  test_zone.yaml  warehouse.world_map.yaml  warehouse.yaml  workshop_example.pgm  workshop_example.world_map.yaml  workshop_example.yaml
src/world_to_map/rviz/: world_to_map.rviz
src/world_to_map/world_to_map/: rasterize_world.py  teleop_wasdx.py
world_files/: diamond_map.world
(+2450 files in other folders)
