<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_llm_experiments</name>
  <version>0.1.0</version>
  <description>Batch experiment runner on top of nav2_llm_demo. Runs YAML-defined navigation experiments across selected flows, with per-experiment data logging (LLM calls, pose/scan/cmd_vel streams, actions, rosbag2, outcome metadata).</description>
  <maintainer email="akaluri@ncsu.edu">Anirudh, Brennen, Miles</maintainer>
  <license>MIT-0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>nav2_llm_demo</exec_depend>
  <!-- The orchestrator shells out to `ros2 bag record`; the rosbag2 stack
       is provided by the system ROS install (no Python-level dependency
       needed). Pass --no-rosbag if rosbag2 is unavailable. -->
  <!-- <exec_depend>ros2bag</exec_depend> -->
  <!-- <exec_depend>rosbag2_storage_default_plugins</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
