<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>world_to_map</name>
  <version>0.0.0</version>
  <description>
    Rasterize a Gazebo .world (top-down, occupied-or-free) into a Nav2 PGM+YAML
    map and launch Gazebo + map_server + RViz + TurtleBot3 Burger so the same
    robot pose is shown 1:1 in both views (controllable with w/a/s/d/x teleop).
  </description>
  <maintainer email="akaluri@ncsu.edu">NCSU CSC591</maintainer>
  <license>MIT-0</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
